App/k8s/kustomize/prod/Rollout.client-react.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: client-react-nginx
  namespace: my-app
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client-react-nginx
  template:
    metadata:
      labels:
        app: client-react-nginx
    spec:
      containers:
        - name: client-react-nginx
          image: client-react-placeholder
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          volumeMounts:
            - name: nginx-conf-vol
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: nginx-conf-vol
          configMap:
            name: prod-nginx-conf
  strategy:
    canary:
      stableService: prod-client-react-nginx
      canaryService: prod-client-react-nginx-canary
      stickySession:
        cookieName: X-Canary
        maxAge: "1h"
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: prod-app-route
            namespace: my-app
      steps:
        - setWeight: 50
        - pause: {}
