App/k8s/kustomize/prod/Service-client-react-nginx-bluegreen.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-react-nginx-active
  namespace: my-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: react-nginx
---

apiVersion: v1
kind: Service
metadata:
  name: client-react-nginx-preview
  namespace: my-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: react-nginx
