App/k8s/kustomize/prod/Service.client-react-nginx-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-react-nginx-canary
  namespace: my-app
spec:
  selector:
    app: client-react-nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
