App/k8s/kustomize/prod/gateway.yaml
#https://gateway-api.sigs.k8s.io/concepts/api-overview/#gateway Documentation
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-gateway
  namespace: my-app
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
