App/k8s/kustomize/prod/httproute.yaml
#https://gateway-api.sigs.k8s.io/concepts/api-overview/#httproute Documentation
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: my-app
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - name: prod-app-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/node
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: prod-api-node
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prod-client-react-nginx
          port: 8080
          weight: 1
        - name: prod-client-react-nginx-canary
          port: 8080
          weight: 0
